commit 25198f274b66d1c1651caeb065c77a47e07544f2
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Tue May 15 13:23:46 2012 +0200

    Remove useless file.

commit 56707479ebd2f717c29ca97f8e3f72c1959afd54
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Tue May 15 13:22:40 2012 +0200

    Add build system.

commit 738c662a5e26ca9aa0676093cafbc7864bcda220
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Wed May 9 18:07:42 2012 +0200

    Add Makefile