@@ -1,0 +1,8 @@
+#include <config.h>
+#include "libSAL.h"
+
+void libSAL_function(void)
+{
+    printf("%s : %d\n", __FUNCTION__, __LINE__);
+}
+
